# Pociag-do-predykcji

./: .gitignore  AGENTS.md  Makefile  README.md  opencode.json
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  coder.agent.md  coordinator.agent.md  debugger.agent.md  devops.agent.md  frontend.agent.md  reviewer.agent.md
.github/instructions/: frontend.instructions.md  go.instructions.md  python-airflow.instructions.md  sql-migrations.instructions.md
.github/prompts/: add-tracing.prompt.md  code-review.prompt.md  design-api-spec.prompt.md  implement-from-spec.prompt.md  new-airflow-dag.prompt.md  new-db-migration.prompt.md  new-go-service.prompt.md  new-python-service.prompt.md  write-tests.prompt.md
.github/workflows/: ci-cd.yaml
.opencode/agent/: architect.md  coder.md  coordinator.md  debugger.md  devops.md  frontend.md  reviewer.md
.opencode/command/: add-tracing.md  code-review.md  design-api-spec.md  implement-from-spec.md  new-airflow-dag.md  new-db-migration.md  new-go-service.md  new-python-service.md  write-tests.md
.opencode/skills/frontend/: SKILL.md
.opencode/skills/go/: SKILL.md
.opencode/skills/python-airflow/: SKILL.md
.opencode/skills/sql-migrations/: SKILL.md
airflow/: pyproject.toml
airflow/dags/: ingest_operations_daily.py  ingest_schedules_weekly.py  process_disruptions_daily.py  process_operations_daily.py  sync_dictionaries_weekly.py
airflow/plugins/: pyproject.toml
airflow/plugins/pociag_processing/: __init__.py  lake.py  models.py  repository.py  tracing.py
airflow/plugins/pociag_processing/pipelines/: __init__.py  dictionaries.py  disruptions.py  operations.py  schedules.py
airflow/tests/: conftest.py  test_pipelines_dictionaries.py  test_pipelines_disruptions.py  test_pipelines_operations.py  test_pipelines_schedules.py  test_repository.py
db/migrations/: 000_raw_landing.down.sql  000_raw_landing.up.sql  001_dictionaries.down.sql  001_dictionaries.up.sql  002_schedules.down.sql  002_schedules.up.sql  003_operations.down.sql  003_operations.up.sql  004_disruptions.down.sql  004_disruptions.up.sql  005_ingestion_tracking.down.sql  005_ingestion_tracking.up.sql  006_extensions.down.sql  006_extensions.up.sql  007_drop_raw_tables.down.sql  007_drop_raw_tables.up.sql
docs/: architecture.md  copilot-cli.md  opencode.md
docs/decisions/: 001-base-platform-architecture.md  002-data-lake-raw-landing.md  003-processor-to-airflow-plugin.md  004-frontend-architecture.md
infra/: .env.example  docker-compose.yml  docker-compose.yml.bak  otel-collector-config.yml  prometheus.yml
services/frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json
services/frontend/public/: poland-border.geojson
services/go/collector/: Dockerfile  README.md  go.mod  go.sum
services/python/processor/: .instructions.md  Dockerfile  Makefile  pyproject.toml
services/python/processor/src/processor/: config.py  dependencies.py  lake.py  main.py  models.py  repository.py  router.py
services/python/processor/tests/: conftest.py  test_router.py
specs/: airflow-dags.md
specs/asyncapi/: platform-events.yml
specs/openapi/: collector.yml  data-service.yml  gateway.yml  plk-open-data.json  processor.yml
specs/schemas/: disruption.json  ingestion-run.json  route.json  station.json  train-operation.json
(+62 files in other folders)
