[project]
name = "pociag-processor"
version = "0.1.0"
description = "Pociag Processor service"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "boto3>=1.35.0",
  "fastapi>=0.115.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "polars>=1.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "asgi-lifespan>=2.1.0",
  "boto3-stubs[s3]>=1.35.0",
  "httpx>=0.27.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "testcontainers[postgres]>=4.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["processor"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "A", "RUF"]
